--- a/style.css
+++ b/style.css
@@ -21,4 +21,25 @@
     height: 10px;
     background-color: red;
     position: absolute;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.wall {
+    background-color: green;
+    position: absolute;
+}
+
+.wall-right {
+    width: 2px;
+    height: 60px;
+    margin-left: 60px;
+    margin-top: 10px;
+}
+
+.wall-down {
+    width: 60px;
+    height: 2px;
+    margin-top: 60px;
+    margin-left: 10px;
 }
