--- a/style.css
+++ b/style.css
@@ -154,6 +154,22 @@
     height: 30px;
     background-color: #EF9E54;
     position: absolute;
+    text-align: center;
+}
+
+.sink-player {
+    margin: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+}
+
+.sink-player1 {
+    background-color: blue;
+}
+
+.sink-player2 {
+    background-color: red;
 }
 
 .score {
