--- a/style.css
+++ b/style.css
@@ -175,3 +175,10 @@
 .score {
     float:left;
 }
+
+.cursor {
+    width: 54px;
+    height: 54px;
+    border: 3px solid red;
+    position: absolute;
+}
