--- a/style.css
+++ b/style.css
@@ -179,6 +179,13 @@
 .cursor {
     width: 54px;
     height: 54px;
-    border: 3px solid blue;
     position: absolute;
+}
+
+.cursor-player1 {
+    border: 3px solid blue;
+}
+
+.cursor-player2 {
+    border: 3px solid red;
 }
